@@ -185,9 +185,9 @@
 </form>
 
 
-<p>While Platypus is free, it is the product of countless of hours of work over the span of over a decade.  If Platypus makes your life easier, please <strong><a href="http://sveinbjorn.org/donations">make a donation</a></strong> to support further development.  I rely on donations to encourage me in continuing development of Platypus.</p>
+<p>While Platypus is free, it is the product of countless of hours of work over the span of over a decade.  If Platypus makes your life easier, please <strong><a href="http://sveinbjorn.org/donations">make a donation</a></strong> to support further development.</p>
 
-<p>That being said, while I am happy to respond to feature requests, bug reports and questions concerning Platypus which are not addressed in this document, <em>I will not respond to queries about scripting and scripting languages</em>.  Productive use of Platypus assumes that you are competent in your scripting language of choice.  I am obliged to note this due to the large number of queries I have received over the years about scripting languages and their use.  I simply don't have the time or expertise to respond to such queries.  There are plenty of good tutorials for most scripting languages freely available online.  For specific issues, there's always <a href="http://stackoverflow.com">Stack Overflow</a>.</p>
+<p>That being said, while I am happy to respond to feature requests, bug reports and questions concerning Platypus which are not addressed in this document, <em>I cannot respond to queries about the particulars of scripting languages</em>.  Productive use of Platypus assumes that you are competent in your scripting language of choice.</p>
 
 <br><br>
 
@@ -211,7 +211,7 @@
 
 <h3>How does it work?</h3>
 
-<p>Regular Mac OS X applications are bundles -- special folders with a directory structure containing a binary, along with resources, configuration files and property lists.  Platypus creates applications with a special binary that launches a specified script and captures its output.  The native binary can present script output in a number of ways, for example with a progress bar, a text view or a WebKit-based web view.</p>
+<p>Regular Mac OS X applications are bundles -- special folders with a directory structure containing a binary, along with resources, configuration files and property lists.  Platypus creates applications with a special binary that launches a specified script and captures its output.  The native binary can present script output in various ways, for example with a progress bar, a text view or a WebKit-based web view.</p>
 
 <br><br>
 
@@ -219,7 +219,7 @@
 
 <h3>What Platypus is NOT</h3>
 
-<p>Platypus is not a set of bindings between the native Mac OS X APIs and scripting languages.  It is not, in other words, a full development environment for Mac OS X and not intended for creating substantial Mac OS X applications with complex and dynamic user interaction.  If you want to create advanced Mac OS X applications, you should learn to program using the Cocoa APIs.  Platypus is not and never will be a substitute for learning to use the excellent native application programming interfaces.</p>
+<p>Platypus is not a set of bindings between the native Mac OS X APIs and scripting languages.  It is not, in other words, a full GUI development environment for Mac OS X and is not intended for creating substantial Mac OS X applications with complex and dynamic user interaction.  If you want to create advanced Mac OS X applications, you should learn to program using the Cocoa APIs.  Platypus is not and never will be a substitute for learning to use the excellent native application programming interfaces.</p>
 
 <p>That being said, you may be able to add some interactive GUI elements using <a href="#73">CocoaDialog or Pashua.</a></p>
 
