@@ -24,6 +24,8 @@ For 5.0
     TODO: Hide PROGRESS:XX and other bidirectional communications syntax from output text field
     TODO: Long GNU named params for command line tool, e.g. --some-option
     TODO: Fix red "Generic Application" icon text
+    TODO: Add example showing STATUSMENUICON: syntax in action
+    TODO: Add documentation for ALERT:Title|Info syntax
 
     * New high resolution (1024x1024) application icons
     * Added ALERT:\.+ syntax, which triggers a modal alert dialog
